--- a/trunk/Scout.xib
+++ b/trunk/Scout.xib
@@ -21,7 +21,7 @@
 		</object>
 		<object class="NSMutableArray" key="IBDocument.EditedObjectIDs">
 			<bool key="EncodedWithXMLCoder">YES</bool>
-			<integer value="1"/>
+			<integer value="511"/>
 		</object>
 		<object class="NSArray" key="IBDocument.PluginDependencies">
 			<bool key="EncodedWithXMLCoder">YES</bool>
@@ -61,6 +61,7 @@
 						<int key="NSvFlags">265</int>
 						<string key="NSFrame">{{938, 692}, {187, 19}}</string>
 						<reference key="NSSuperview" ref="1005"/>
+						<reference key="NSWindow"/>
 						<bool key="NSEnabled">YES</bool>
 						<object class="NSButtonCell" key="NSCell" id="109818315">
 							<int key="NSCellFlags">-2080244224</int>
@@ -85,6 +86,7 @@
 						<int key="NSvFlags">18</int>
 						<string key="NSFrameSize">{1152, 684}</string>
 						<reference key="NSSuperview" ref="1005"/>
+						<reference key="NSWindow"/>
 						<object class="NSMutableArray" key="NSTabViewItems">
 							<bool key="EncodedWithXMLCoder">YES</bool>
 							<object class="NSTabViewItem" id="548460852">
@@ -99,6 +101,7 @@
 											<int key="NSvFlags">289</int>
 											<string key="NSFrame">{{940, 12}, {198, 32}}</string>
 											<reference key="NSSuperview" ref="171337233"/>
+											<reference key="NSWindow"/>
 											<bool key="NSEnabled">YES</bool>
 											<object class="NSButtonCell" key="NSCell" id="700909615">
 												<int key="NSCellFlags">67239424</int>
@@ -123,6 +126,7 @@
 											<int key="NSvFlags">265</int>
 											<string key="NSFrame">{{889, 642}, {243, 22}}</string>
 											<reference key="NSSuperview" ref="171337233"/>
+											<reference key="NSWindow"/>
 											<bool key="NSEnabled">YES</bool>
 											<object class="NSSearchFieldCell" key="NSCell" id="887579800">
 												<int key="NSCellFlags">343014976</int>
@@ -211,12 +215,14 @@
 															<int key="NSvFlags">256</int>
 															<string key="NSFrameSize">{4234, 527}</string>
 															<reference key="NSSuperview" ref="64726803"/>
+															<reference key="NSWindow"/>
 															<bool key="NSEnabled">YES</bool>
 															<object class="NSTableHeaderView" key="NSHeaderView" id="589844261">
 																<reference key="NSNextResponder" ref="591751102"/>
 																<int key="NSvFlags">256</int>
 																<string key="NSFrameSize">{4234, 17}</string>
 																<reference key="NSSuperview" ref="591751102"/>
+																<reference key="NSWindow"/>
 																<reference key="NSTableView" ref="472717556"/>
 															</object>
 															<object class="_NSCornerView" key="NSCornerView" id="35132809">
@@ -224,6 +230,7 @@
 																<int key="NSvFlags">-2147483392</int>
 																<string key="NSFrame">{{1197, 0}, {16, 17}}</string>
 																<reference key="NSSuperview" ref="783328619"/>
+																<reference key="NSWindow"/>
 															</object>
 															<object class="NSMutableArray" key="NSTableColumns">
 																<bool key="EncodedWithXMLCoder">YES</bool>
@@ -6778,6 +6785,7 @@
 													</object>
 													<string key="NSFrame">{{1, 17}, {1150, 527}}</string>
 													<reference key="NSSuperview" ref="783328619"/>
+													<reference key="NSWindow"/>
 													<reference key="NSNextKeyView" ref="472717556"/>
 													<reference key="NSDocView" ref="472717556"/>
 													<reference key="NSBGColor" ref="725575904"/>
@@ -6788,6 +6796,7 @@
 													<int key="NSvFlags">-2147483392</int>
 													<string key="NSFrame">{{1197, 17}, {15, 407}}</string>
 													<reference key="NSSuperview" ref="783328619"/>
+													<reference key="NSWindow"/>
 													<reference key="NSTarget" ref="783328619"/>
 													<string key="NSAction">_doScroller:</string>
 													<double key="NSCurValue">0.0056925996204933585</double>
@@ -6798,6 +6807,7 @@
 													<int key="NSvFlags">256</int>
 													<string key="NSFrame">{{1, 544}, {1150, 15}}</string>
 													<reference key="NSSuperview" ref="783328619"/>
+													<reference key="NSWindow"/>
 													<bool key="NSEnabled">YES</bool>
 													<int key="NSsFlags">1</int>
 													<reference key="NSTarget" ref="783328619"/>
@@ -6813,6 +6823,7 @@
 													</object>
 													<string key="NSFrame">{{1, 0}, {1150, 17}}</string>
 													<reference key="NSSuperview" ref="783328619"/>
+													<reference key="NSWindow"/>
 													<reference key="NSNextKeyView" ref="589844261"/>
 													<reference key="NSDocView" ref="589844261"/>
 													<reference key="NSBGColor" ref="725575904"/>
@@ -6822,6 +6833,7 @@
 											</object>
 											<string key="NSFrame">{{0, 74}, {1152, 560}}</string>
 											<reference key="NSSuperview" ref="171337233"/>
+											<reference key="NSWindow"/>
 											<reference key="NSNextKeyView" ref="64726803"/>
 											<int key="NSsFlags">690</int>
 											<reference key="NSVScroller" ref="127406393"/>
@@ -6836,6 +6848,7 @@
 											<int key="NSvFlags">268</int>
 											<string key="NSFrame">{{20, 642}, {148, 23}}</string>
 											<reference key="NSSuperview" ref="171337233"/>
+											<reference key="NSWindow"/>
 											<bool key="NSEnabled">YES</bool>
 											<object class="NSButtonCell" key="NSCell" id="674389658">
 												<int key="NSCellFlags">-2080244224</int>
@@ -6856,6 +6869,7 @@
 											<int key="NSvFlags">268</int>
 											<string key="NSFrame">{{352, 642}, {148, 23}}</string>
 											<reference key="NSSuperview" ref="171337233"/>
+											<reference key="NSWindow"/>
 											<bool key="NSEnabled">YES</bool>
 											<object class="NSButtonCell" key="NSCell" id="107513504">
 												<int key="NSCellFlags">-2080244224</int>
@@ -6876,6 +6890,7 @@
 											<int key="NSvFlags">265</int>
 											<string key="NSFrame">{{755, 642}, {126, 23}}</string>
 											<reference key="NSSuperview" ref="171337233"/>
+											<reference key="NSWindow"/>
 											<bool key="NSEnabled">YES</bool>
 											<object class="NSButtonCell" key="NSCell" id="235399743">
 												<int key="NSCellFlags">-2080244224</int>
@@ -6900,6 +6915,7 @@
 											<int key="NSvFlags">292</int>
 											<string key="NSFrame">{{20, 43}, {187, 19}}</string>
 											<reference key="NSSuperview" ref="171337233"/>
+											<reference key="NSWindow"/>
 											<bool key="NSEnabled">YES</bool>
 											<object class="NSButtonCell" key="NSCell" id="649728606">
 												<int key="NSCellFlags">-2080244224</int>
@@ -6920,6 +6936,7 @@
 											<int key="NSvFlags">292</int>
 											<string key="NSFrame">{{20, 18}, {187, 19}}</string>
 											<reference key="NSSuperview" ref="171337233"/>
+											<reference key="NSWindow"/>
 											<bool key="NSEnabled">YES</bool>
 											<object class="NSButtonCell" key="NSCell" id="213921412">
 												<int key="NSCellFlags">-2080244224</int>
@@ -6940,6 +6957,7 @@
 											<int key="NSvFlags">292</int>
 											<string key="NSFrame">{{410, 43}, {187, 19}}</string>
 											<reference key="NSSuperview" ref="171337233"/>
+											<reference key="NSWindow"/>
 											<bool key="NSEnabled">YES</bool>
 											<object class="NSButtonCell" key="NSCell" id="741709833">
 												<int key="NSCellFlags">-2080244224</int>
@@ -6960,6 +6978,7 @@
 											<int key="NSvFlags">292</int>
 											<string key="NSFrame">{{215, 43}, {187, 19}}</string>
 											<reference key="NSSuperview" ref="171337233"/>
+											<reference key="NSWindow"/>
 											<bool key="NSEnabled">YES</bool>
 											<object class="NSButtonCell" key="NSCell" id="543024201">
 												<int key="NSCellFlags">-2080244224</int>
@@ -6980,6 +6999,7 @@
 											<int key="NSvFlags">260</int>
 											<string key="NSFrame">{{605, 43}, {187, 19}}</string>
 											<reference key="NSSuperview" ref="171337233"/>
+											<reference key="NSWindow"/>
 											<bool key="NSEnabled">YES</bool>
 											<object class="NSButtonCell" key="NSCell" id="420486305">
 												<int key="NSCellFlags">-2080244224</int>
@@ -6998,6 +7018,7 @@
 									</object>
 									<string key="NSFrameSize">{1152, 684}</string>
 									<reference key="NSSuperview" ref="682049187"/>
+									<reference key="NSWindow"/>
 								</object>
 								<string key="NSLabel">Tab</string>
 								<reference key="NSColor" ref="269370269"/>
@@ -13584,6 +13605,7 @@
 						<int key="NSvFlags">268</int>
 						<string key="NSFrame">{{20, 691}, {249, 23}}</string>
 						<reference key="NSSuperview" ref="1005"/>
+						<reference key="NSWindow"/>
 						<bool key="NSEnabled">YES</bool>
 						<object class="NSSegmentedCell" key="NSCell" id="938270084">
 							<int key="NSCellFlags">-2080244224</int>
@@ -13626,6 +13648,7 @@
 				</object>
 				<string key="NSFrameSize">{1152, 734}</string>
 				<reference key="NSSuperview"/>
+				<reference key="NSWindow"/>
 				<string key="NSClassName">NSView</string>
 			</object>
 			<object class="BWSheetController" id="32181944">
@@ -13890,6 +13913,7 @@
 					<string>playerStats.centreBack</string>
 					<string>playerStats.fit</string>
 					<string>playerStats.penalties</string>
+					<string>photo</string>
 				</object>
 				<string key="NSObjectClassName">Team</string>
 				<bool key="NSEditable">YES</bool>
@@ -23046,7 +23070,7 @@
 				<nil key="NSViewClass"/>
 				<string key="NSWindowContentMaxSize">{1.79769e+308, 1.79769e+308}</string>
 				<object class="NSView" key="NSWindowView" id="386320474">
-					<nil key="NSNextResponder"/>
+					<reference key="NSNextResponder"/>
 					<int key="NSvFlags">256</int>
 					<object class="NSMutableArray" key="NSSubviews">
 						<bool key="EncodedWithXMLCoder">YES</bool>
@@ -24707,6 +24731,38 @@
 													<int key="NSCellFlags">130560</int>
 													<int key="NSCellFlags2">33554432</int>
 													<reference key="NSContents" ref="948586539"/>
+													<int key="NSAlign">0</int>
+													<int key="NSScale">0</int>
+													<int key="NSStyle">0</int>
+													<bool key="NSAnimates">NO</bool>
+												</object>
+												<bool key="NSEditable">YES</bool>
+											</object>
+											<object class="NSImageView" id="957540732">
+												<reference key="NSNextResponder" ref="694735170"/>
+												<int key="NSvFlags">268</int>
+												<object class="NSMutableSet" key="NSDragTypes">
+													<bool key="EncodedWithXMLCoder">YES</bool>
+													<object class="NSArray" key="set.sortedObjects">
+														<bool key="EncodedWithXMLCoder">YES</bool>
+														<string>Apple PDF pasteboard type</string>
+														<string>Apple PICT pasteboard type</string>
+														<string>Apple PNG pasteboard type</string>
+														<string>NSFilenamesPboardType</string>
+														<string>NeXT Encapsulated PostScript v1.2 pasteboard type</string>
+														<string>NeXT TIFF v4.0 pasteboard type</string>
+													</object>
+												</object>
+												<string key="NSFrame">{{33, 158}, {136, 136}}</string>
+												<reference key="NSSuperview" ref="694735170"/>
+												<bool key="NSEnabled">YES</bool>
+												<object class="NSImageCell" key="NSCell" id="160450307">
+													<int key="NSCellFlags">130560</int>
+													<int key="NSCellFlags2">33554432</int>
+													<object class="NSCustomResource" key="NSContents">
+														<string key="NSClassName">NSImage</string>
+														<string key="NSResourceName">defaultperson_female</string>
+													</object>
 													<int key="NSAlign">0</int>
 													<int key="NSScale">0</int>
 													<int key="NSStyle">0</int>
@@ -27551,6 +27607,7 @@
 						</object>
 					</object>
 					<string key="NSFrameSize">{1010, 408}</string>
+					<reference key="NSSuperview"/>
 				</object>
 				<string key="NSScreenRect">{{0, 0}, {1440, 878}}</string>
 				<string key="NSMaxSize">{1.79769e+308, 1.79769e+308}</string>
@@ -40845,6 +40902,22 @@
 					</object>
 					<int key="connectionID">2517</int>
 				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBBindingConnection" key="connection">
+						<string key="label">value: selection.photo</string>
+						<reference key="source" ref="957540732"/>
+						<reference key="destination" ref="337206866"/>
+						<object class="NSNibBindingConnector" key="connector">
+							<reference key="NSSource" ref="957540732"/>
+							<reference key="NSDestination" ref="337206866"/>
+							<string key="NSLabel">value: selection.photo</string>
+							<string key="NSBinding">value</string>
+							<string key="NSKeyPath">selection.photo</string>
+							<int key="NSNibBindingConnectorVersion">2</int>
+						</object>
+					</object>
+					<int key="connectionID">2521</int>
+				</object>
 			</object>
 			<object class="IBMutableOrderedSet" key="objectRecords">
 				<object class="NSArray" key="orderedObjects">
@@ -44732,6 +44805,7 @@
 							<reference ref="743827956"/>
 							<reference ref="572357361"/>
 							<reference ref="972552750"/>
+							<reference ref="957540732"/>
 						</object>
 						<reference key="parent" ref="112839013"/>
 					</object>
@@ -53665,6 +53739,20 @@
 						<reference key="parent" ref="0"/>
 						<string key="objectName">Scout Controller</string>
 					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">2518</int>
+						<reference key="object" ref="957540732"/>
+						<object class="NSMutableArray" key="children">
+							<bool key="EncodedWithXMLCoder">YES</bool>
+							<reference ref="160450307"/>
+						</object>
+						<reference key="parent" ref="694735170"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">2519</int>
+						<reference key="object" ref="160450307"/>
+						<reference key="parent" ref="957540732"/>
+					</object>
 				</object>
 			</object>
 			<object class="NSMutableDictionary" key="flattenedProperties">
@@ -54920,6 +55008,8 @@
 					<string>25.windowTemplate.minSize</string>
 					<string>250.IBPluginDependency</string>
 					<string>251.IBPluginDependency</string>
+					<string>2518.IBPluginDependency</string>
+					<string>2519.IBPluginDependency</string>
 					<string>252.IBPluginDependency</string>
 					<string>253.IBPluginDependency</string>
 					<string>254.IBPluginDependency</string>
@@ -57114,9 +57204,9 @@
 					<integer value="1041"/>
 					<boolean value="YES"/>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
-					<string>{{16, 296}, {1010, 408}}</string>
+					<string>{{61, 334}, {1010, 408}}</string>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
-					<string>{{16, 296}, {1010, 408}}</string>
+					<string>{{61, 334}, {1010, 408}}</string>
 					<boolean value="NO"/>
 					<string>{1.79769e+308, 1.79769e+308}</string>
 					<string>{0, 0}</string>
@@ -57283,6 +57373,8 @@
 					<boolean value="YES"/>
 					<string>{1.79769e+308, 1.79769e+308}</string>
 					<string>{0, 0}</string>
+					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
+					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
@@ -58742,7 +58834,7 @@
 				</object>
 			</object>
 			<nil key="sourceID"/>
-			<int key="maxID">2517</int>
+			<int key="maxID">2521</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<object class="NSMutableArray" key="referencedPartialClassDescriptions">
@@ -59668,13 +59760,6 @@
 					<string key="className">NSObject</string>
 					<object class="IBClassDescriptionSource" key="sourceIdentifier">
 						<string key="majorKey">IBFrameworkSource</string>
-						<string key="minorKey">PSMTabBarFramework.framework/Headers/PSMTabBarControl.h</string>
-					</object>
-				</object>
-				<object class="IBPartialClassDescription">
-					<string key="className">NSObject</string>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBFrameworkSource</string>
 						<string key="minorKey">QuartzCore.framework/Headers/CAAnimation.h</string>
 					</object>
 				</object>
@@ -59980,6 +60065,7 @@
 				<string>NSMenuMixedState</string>
 				<string>NSQuickLookTemplate</string>
 				<string>NSSwitch</string>
+				<string>defaultperson_female</string>
 				<string>fullpitch</string>
 				<string>gkscreenblanked</string>
 				<string>goalkeeperNotPlayed</string>
@@ -59995,8 +60081,9 @@
 				<string>{7, 2}</string>
 				<string>{19, 11}</string>
 				<string>{15, 15}</string>
+				<string>{180, 180}</string>
 				<string>{320, 335}</string>
-				<string>{1007.28, 335.093}</string>
+				<string>{1021.33, 339.766}</string>
 				<string>{38, 38}</string>
 				<string>{38, 38}</string>
 				<string>{47, 47}</string>
