--- a/trunk/Editor.xib
+++ b/trunk/Editor.xib
@@ -239,7 +239,7 @@
 										<int key="NSTag">13</int>
 										<bool key="NSEnabled">YES</bool>
 										<object class="NSButtonCell" key="NSCell" id="8230030">
-											<int key="NSCellFlags">604110336</int>
+											<int key="NSCellFlags">67239424</int>
 											<int key="NSCellFlags2">134217728</int>
 											<string key="NSContents"/>
 											<reference key="NSSupport" ref="903348179"/>
@@ -895,7 +895,7 @@
 				<nil key="NSViewClass"/>
 				<string key="NSWindowContentMaxSize">{1.79769e+308, 1.79769e+308}</string>
 				<object class="NSView" key="NSWindowView" id="1067804915">
-					<reference key="NSNextResponder"/>
+					<nil key="NSNextResponder"/>
 					<int key="NSvFlags">256</int>
 					<object class="NSMutableArray" key="NSSubviews">
 						<bool key="EncodedWithXMLCoder">YES</bool>
@@ -904,7 +904,6 @@
 							<int key="NSvFlags">268</int>
 							<string key="NSFrame">{{14, 12}, {96, 32}}</string>
 							<reference key="NSSuperview" ref="1067804915"/>
-							<reference key="NSWindow"/>
 							<bool key="NSEnabled">YES</bool>
 							<object class="NSButtonCell" key="NSCell" id="654553474">
 								<int key="NSCellFlags">67239424</int>
@@ -925,7 +924,6 @@
 							<int key="NSvFlags">268</int>
 							<string key="NSFrame">{{20, 315}, {260, 22}}</string>
 							<reference key="NSSuperview" ref="1067804915"/>
-							<reference key="NSWindow"/>
 							<bool key="NSEnabled">YES</bool>
 							<object class="NSSearchFieldCell" key="NSCell" id="858405340">
 								<int key="NSCellFlags">343014976</int>
@@ -997,7 +995,6 @@
 											<int key="NSvFlags">256</int>
 											<string key="NSFrameSize">{258, 247}</string>
 											<reference key="NSSuperview" ref="517673079"/>
-											<reference key="NSWindow"/>
 											<bool key="NSEnabled">YES</bool>
 											<object class="_NSCornerView" key="NSCornerView">
 												<nil key="NSNextResponder"/>
@@ -1053,7 +1050,6 @@
 									</object>
 									<string key="NSFrame">{{1, 1}, {258, 247}}</string>
 									<reference key="NSSuperview" ref="505564076"/>
-									<reference key="NSWindow"/>
 									<reference key="NSNextKeyView" ref="737674717"/>
 									<reference key="NSDocView" ref="737674717"/>
 									<reference key="NSBGColor" ref="998964866"/>
@@ -1064,7 +1060,6 @@
 									<int key="NSvFlags">-2147483392</int>
 									<string key="NSFrame">{{224, 17}, {15, 102}}</string>
 									<reference key="NSSuperview" ref="505564076"/>
-									<reference key="NSWindow"/>
 									<reference key="NSTarget" ref="505564076"/>
 									<string key="NSAction">_doScroller:</string>
 									<double key="NSPercent">0.99557524919509888</double>
@@ -1074,7 +1069,6 @@
 									<int key="NSvFlags">-2147483392</int>
 									<string key="NSFrame">{{1, 211}, {234, 15}}</string>
 									<reference key="NSSuperview" ref="505564076"/>
-									<reference key="NSWindow"/>
 									<int key="NSsFlags">1</int>
 									<reference key="NSTarget" ref="505564076"/>
 									<string key="NSAction">_doScroller:</string>
@@ -1083,7 +1077,6 @@
 							</object>
 							<string key="NSFrame">{{20, 58}, {260, 249}}</string>
 							<reference key="NSSuperview" ref="1067804915"/>
-							<reference key="NSWindow"/>
 							<reference key="NSNextKeyView" ref="517673079"/>
 							<int key="NSsFlags">562</int>
 							<reference key="NSVScroller" ref="178838042"/>
@@ -1096,7 +1089,6 @@
 							<int key="NSvFlags">268</int>
 							<string key="NSFrame">{{190, 12}, {96, 32}}</string>
 							<reference key="NSSuperview" ref="1067804915"/>
-							<reference key="NSWindow"/>
 							<bool key="NSEnabled">YES</bool>
 							<object class="NSButtonCell" key="NSCell" id="421917827">
 								<int key="NSCellFlags">67239424</int>
@@ -1114,8 +1106,6 @@
 						</object>
 					</object>
 					<string key="NSFrameSize">{300, 350}</string>
-					<reference key="NSSuperview"/>
-					<reference key="NSWindow"/>
 				</object>
 				<string key="NSScreenRect">{{0, 0}, {1440, 878}}</string>
 				<string key="NSMaxSize">{1.79769e+308, 1.79769e+308}</string>
@@ -4802,7 +4792,7 @@
 				</object>
 				<object class="NSMutableArray" key="dict.values">
 					<bool key="EncodedWithXMLCoder">YES</bool>
-					<string>{{56, 66}, {1152, 734}}</string>
+					<string>{{23, 66}, {1152, 734}}</string>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 					<string>{628, 654}</string>
 					<string>{{217, 442}, {480, 272}}</string>
