--- a/trunk/Editor.xib
+++ b/trunk/Editor.xib
@@ -21,6 +21,7 @@
 		</object>
 		<object class="NSMutableArray" key="IBDocument.EditedObjectIDs">
 			<bool key="EncodedWithXMLCoder">YES</bool>
+			<integer value="138"/>
 		</object>
 		<object class="NSArray" key="IBDocument.PluginDependencies">
 			<bool key="EncodedWithXMLCoder">YES</bool>
@@ -55,9 +56,47 @@
 					<object class="NSCustomView" id="46096893">
 						<reference key="NSNextResponder" ref="1005"/>
 						<int key="NSvFlags">274</int>
+						<object class="NSMutableArray" key="NSSubviews">
+							<bool key="EncodedWithXMLCoder">YES</bool>
+							<object class="NSTextField" id="749158260">
+								<reference key="NSNextResponder" ref="46096893"/>
+								<int key="NSvFlags">266</int>
+								<string key="NSFrame">{{17, 153}, {1118, 283}}</string>
+								<reference key="NSSuperview" ref="46096893"/>
+								<bool key="NSEnabled">YES</bool>
+								<object class="NSTextFieldCell" key="NSCell" id="187866901">
+									<int key="NSCellFlags">67239424</int>
+									<int key="NSCellFlags2">138674176</int>
+									<string key="NSContents">To browse entities within your game, first select a section from the options above</string>
+									<object class="NSFont" key="NSSupport">
+										<string key="NSName">LucidaGrande</string>
+										<double key="NSSize">23</double>
+										<int key="NSfFlags">16</int>
+									</object>
+									<reference key="NSControlView" ref="749158260"/>
+									<object class="NSColor" key="NSBackgroundColor">
+										<int key="NSColorSpace">6</int>
+										<string key="NSCatalogName">System</string>
+										<string key="NSColorName">controlColor</string>
+										<object class="NSColor" key="NSColor" id="986456898">
+											<int key="NSColorSpace">3</int>
+											<bytes key="NSWhite">MC42NjY2NjY2NjY3AA</bytes>
+										</object>
+									</object>
+									<object class="NSColor" key="NSTextColor" id="119007199">
+										<int key="NSColorSpace">6</int>
+										<string key="NSCatalogName">System</string>
+										<string key="NSColorName">controlTextColor</string>
+										<object class="NSColor" key="NSColor" id="275698287">
+											<int key="NSColorSpace">3</int>
+											<bytes key="NSWhite">MAA</bytes>
+										</object>
+									</object>
+								</object>
+							</object>
+						</object>
 						<string key="NSFrameSize">{1152, 651}</string>
 						<reference key="NSSuperview" ref="1005"/>
-						<reference key="NSWindow"/>
 						<string key="NSClassName">NSView</string>
 					</object>
 					<object class="NSBox" id="258134562">
@@ -75,7 +114,6 @@
 										<int key="NSvFlags">268</int>
 										<string key="NSFrame">{{665, 10}, {55, 55}}</string>
 										<reference key="NSSuperview" ref="658917865"/>
-										<reference key="NSWindow"/>
 										<int key="NSTag">12</int>
 										<bool key="NSEnabled">YES</bool>
 										<object class="NSButtonCell" key="NSCell" id="331898540">
@@ -105,7 +143,6 @@
 										<int key="NSvFlags">268</int>
 										<string key="NSFrame">{{901, 10}, {55, 55}}</string>
 										<reference key="NSSuperview" ref="658917865"/>
-										<reference key="NSWindow"/>
 										<int key="NSTag">16</int>
 										<bool key="NSEnabled">YES</bool>
 										<object class="NSButtonCell" key="NSCell" id="53888623">
@@ -131,7 +168,6 @@
 										<int key="NSvFlags">268</int>
 										<string key="NSFrame">{{75, 10}, {55, 55}}</string>
 										<reference key="NSSuperview" ref="658917865"/>
-										<reference key="NSWindow"/>
 										<int key="NSTag">2</int>
 										<bool key="NSEnabled">YES</bool>
 										<object class="NSButtonCell" key="NSCell" id="735099314">
@@ -157,7 +193,6 @@
 										<int key="NSvFlags">268</int>
 										<string key="NSFrame">{{547, 10}, {55, 55}}</string>
 										<reference key="NSSuperview" ref="658917865"/>
-										<reference key="NSWindow"/>
 										<int key="NSTag">10</int>
 										<bool key="NSEnabled">YES</bool>
 										<object class="NSButtonCell" key="NSCell" id="405952724">
@@ -183,7 +218,6 @@
 										<int key="NSvFlags">268</int>
 										<string key="NSFrame">{{606, 10}, {55, 55}}</string>
 										<reference key="NSSuperview" ref="658917865"/>
-										<reference key="NSWindow"/>
 										<int key="NSTag">11</int>
 										<bool key="NSEnabled">YES</bool>
 										<object class="NSButtonCell" key="NSCell" id="698669752">
@@ -209,7 +243,6 @@
 										<int key="NSvFlags">268</int>
 										<string key="NSFrame">{{429, 10}, {55, 55}}</string>
 										<reference key="NSSuperview" ref="658917865"/>
-										<reference key="NSWindow"/>
 										<int key="NSTag">8</int>
 										<bool key="NSEnabled">YES</bool>
 										<object class="NSButtonCell" key="NSCell" id="17181909">
@@ -235,7 +268,6 @@
 										<int key="NSvFlags">268</int>
 										<string key="NSFrame">{{724, 10}, {55, 55}}</string>
 										<reference key="NSSuperview" ref="658917865"/>
-										<reference key="NSWindow"/>
 										<int key="NSTag">13</int>
 										<bool key="NSEnabled">YES</bool>
 										<object class="NSButtonCell" key="NSCell" id="8230030">
@@ -261,7 +293,6 @@
 										<int key="NSvFlags">268</int>
 										<string key="NSFrame">{{311, 10}, {55, 55}}</string>
 										<reference key="NSSuperview" ref="658917865"/>
-										<reference key="NSWindow"/>
 										<int key="NSTag">6</int>
 										<bool key="NSEnabled">YES</bool>
 										<object class="NSButtonCell" key="NSCell" id="991243872">
@@ -287,7 +318,6 @@
 										<int key="NSvFlags">268</int>
 										<string key="NSFrame">{{783, 10}, {55, 55}}</string>
 										<reference key="NSSuperview" ref="658917865"/>
-										<reference key="NSWindow"/>
 										<int key="NSTag">14</int>
 										<bool key="NSEnabled">YES</bool>
 										<object class="NSButtonCell" key="NSCell" id="275315472">
@@ -313,7 +343,6 @@
 										<int key="NSvFlags">268</int>
 										<string key="NSFrame">{{842, 10}, {55, 55}}</string>
 										<reference key="NSSuperview" ref="658917865"/>
-										<reference key="NSWindow"/>
 										<int key="NSTag">15</int>
 										<bool key="NSEnabled">YES</bool>
 										<object class="NSButtonCell" key="NSCell" id="667146895">
@@ -339,7 +368,6 @@
 										<int key="NSvFlags">268</int>
 										<string key="NSFrame">{{960, 10}, {55, 55}}</string>
 										<reference key="NSSuperview" ref="658917865"/>
-										<reference key="NSWindow"/>
 										<int key="NSTag">17</int>
 										<bool key="NSEnabled">YES</bool>
 										<object class="NSButtonCell" key="NSCell" id="325282797">
@@ -365,7 +393,6 @@
 										<int key="NSvFlags">268</int>
 										<string key="NSFrame">{{488, 10}, {55, 55}}</string>
 										<reference key="NSSuperview" ref="658917865"/>
-										<reference key="NSWindow"/>
 										<int key="NSTag">9</int>
 										<bool key="NSEnabled">YES</bool>
 										<object class="NSButtonCell" key="NSCell" id="104919828">
@@ -391,7 +418,6 @@
 										<int key="NSvFlags">268</int>
 										<string key="NSFrame">{{134, 10}, {55, 55}}</string>
 										<reference key="NSSuperview" ref="658917865"/>
-										<reference key="NSWindow"/>
 										<int key="NSTag">3</int>
 										<bool key="NSEnabled">YES</bool>
 										<object class="NSButtonCell" key="NSCell" id="333488423">
@@ -417,7 +443,6 @@
 										<int key="NSvFlags">268</int>
 										<string key="NSFrame">{{252, 10}, {55, 55}}</string>
 										<reference key="NSSuperview" ref="658917865"/>
-										<reference key="NSWindow"/>
 										<int key="NSTag">5</int>
 										<bool key="NSEnabled">YES</bool>
 										<object class="NSButtonCell" key="NSCell" id="644706667">
@@ -443,7 +468,6 @@
 										<int key="NSvFlags">268</int>
 										<string key="NSFrame">{{370, 10}, {55, 55}}</string>
 										<reference key="NSSuperview" ref="658917865"/>
-										<reference key="NSWindow"/>
 										<int key="NSTag">7</int>
 										<bool key="NSEnabled">YES</bool>
 										<object class="NSButtonCell" key="NSCell" id="249621088">
@@ -469,7 +493,6 @@
 										<int key="NSvFlags">268</int>
 										<string key="NSFrame">{{16, 10}, {55, 55}}</string>
 										<reference key="NSSuperview" ref="658917865"/>
-										<reference key="NSWindow"/>
 										<int key="NSTag">1</int>
 										<bool key="NSEnabled">YES</bool>
 										<object class="NSButtonCell" key="NSCell" id="98098685">
@@ -495,7 +518,6 @@
 										<int key="NSvFlags">268</int>
 										<string key="NSFrame">{{193, 10}, {55, 55}}</string>
 										<reference key="NSSuperview" ref="658917865"/>
-										<reference key="NSWindow"/>
 										<int key="NSTag">4</int>
 										<bool key="NSEnabled">YES</bool>
 										<object class="NSButtonCell" key="NSCell" id="912187088">
@@ -519,12 +541,10 @@
 								</object>
 								<string key="NSFrame">{{1, 1}, {1031, 73}}</string>
 								<reference key="NSSuperview" ref="258134562"/>
-								<reference key="NSWindow"/>
 							</object>
 						</object>
 						<string key="NSFrame">{{58, 655}, {1033, 75}}</string>
 						<reference key="NSSuperview" ref="1005"/>
-						<reference key="NSWindow"/>
 						<string key="NSOffsets">{0, 0}</string>
 						<object class="NSTextFieldCell" key="NSTitleCell">
 							<int key="NSCellFlags">67239424</int>
@@ -558,7 +578,6 @@
 				</object>
 				<string key="NSFrameSize">{1152, 734}</string>
 				<reference key="NSSuperview"/>
-				<reference key="NSWindow"/>
 				<string key="NSClassName">NSView</string>
 			</object>
 			<object class="BWSheetController" id="1021523219">
@@ -680,15 +699,7 @@
 								<bool key="NSDrawsBackground">YES</bool>
 								<int key="NSTextBezelStyle">1</int>
 								<reference key="NSBackgroundColor" ref="812090258"/>
-								<object class="NSColor" key="NSTextColor" id="119007199">
-									<int key="NSColorSpace">6</int>
-									<string key="NSCatalogName">System</string>
-									<string key="NSColorName">controlTextColor</string>
-									<object class="NSColor" key="NSColor" id="275698287">
-										<int key="NSColorSpace">3</int>
-										<bytes key="NSWhite">MAA</bytes>
-									</object>
-								</object>
+								<reference key="NSTextColor" ref="119007199"/>
 								<object class="NSButtonCell" key="NSSearchButtonCell">
 									<int key="NSCellFlags">130560</int>
 									<int key="NSCellFlags2">0</int>
@@ -787,10 +798,7 @@
 															<int key="NSColorSpace">6</int>
 															<string key="NSCatalogName">System</string>
 															<string key="NSColorName">controlBackgroundColor</string>
-															<object class="NSColor" key="NSColor">
-																<int key="NSColorSpace">3</int>
-																<bytes key="NSWhite">MC42NjY2NjY2NjY3AA</bytes>
-															</object>
+															<reference key="NSColor" ref="986456898"/>
 														</object>
 														<reference key="NSTextColor" ref="119007199"/>
 													</object>
@@ -3738,6 +3746,10 @@
 					<object class="IBObjectRecord">
 						<int key="objectID">138</int>
 						<reference key="object" ref="46096893"/>
+						<object class="NSMutableArray" key="children">
+							<bool key="EncodedWithXMLCoder">YES</bool>
+							<reference ref="749158260"/>
+						</object>
 						<reference key="parent" ref="1005"/>
 					</object>
 					<object class="IBObjectRecord">
@@ -4580,6 +4592,20 @@
 						<reference key="parent" ref="0"/>
 						<string key="objectName">Club Picker Sheet Controller</string>
 					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">473</int>
+						<reference key="object" ref="749158260"/>
+						<object class="NSMutableArray" key="children">
+							<bool key="EncodedWithXMLCoder">YES</bool>
+							<reference ref="187866901"/>
+						</object>
+						<reference key="parent" ref="46096893"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">474</int>
+						<reference key="object" ref="187866901"/>
+						<reference key="parent" ref="749158260"/>
+					</object>
 				</object>
 			</object>
 			<object class="NSMutableDictionary" key="flattenedProperties">
@@ -4760,6 +4786,8 @@
 					<string>445.IBPluginDependency</string>
 					<string>452.IBPluginDependency</string>
 					<string>463.IBPluginDependency</string>
+					<string>473.IBPluginDependency</string>
+					<string>474.IBPluginDependency</string>
 					<string>81.IBAttributePlaceholdersKey</string>
 					<string>81.IBPluginDependency</string>
 					<string>82.IBPluginDependency</string>
@@ -4792,7 +4820,7 @@
 				</object>
 				<object class="NSMutableArray" key="dict.values">
 					<bool key="EncodedWithXMLCoder">YES</bool>
-					<string>{{23, 66}, {1152, 734}}</string>
+					<string>{{-108, 94}, {1152, 734}}</string>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 					<string>{628, 654}</string>
 					<string>{{217, 442}, {480, 272}}</string>
@@ -5015,6 +5043,8 @@
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 					<string>com.brandonwalkin.BWToolkit</string>
+					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
+					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 					<object class="NSMutableDictionary">
 						<string key="NS.key.0">ToolTip</string>
 						<object class="IBToolTipAttribute" key="NS.object.0">
@@ -5132,7 +5162,7 @@
 				</object>
 			</object>
 			<nil key="sourceID"/>
-			<int key="maxID">468</int>
+			<int key="maxID">474</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<object class="NSMutableArray" key="referencedPartialClassDescriptions">
@@ -5940,23 +5970,23 @@
 			</object>
 			<object class="NSMutableArray" key="dict.values">
 				<bool key="EncodedWithXMLCoder">YES</bool>
-				<string>{128, 128}</string>
-				<string>{128, 128}</string>
-				<string>{128, 128}</string>
-				<string>{128, 128}</string>
-				<string>{128, 128}</string>
-				<string>{128, 128}</string>
-				<string>{128, 128}</string>
-				<string>{128, 128}</string>
-				<string>{128, 128}</string>
-				<string>{128, 128}</string>
-				<string>{128, 128}</string>
-				<string>{128, 128}</string>
-				<string>{128, 128}</string>
-				<string>{128, 128}</string>
-				<string>{128, 128}</string>
-				<string>{128, 128}</string>
-				<string>{128, 128}</string>
+				<string>{64, 64}</string>
+				<string>{64, 64}</string>
+				<string>{64, 64}</string>
+				<string>{64, 64}</string>
+				<string>{64, 64}</string>
+				<string>{64, 64}</string>
+				<string>{64, 64}</string>
+				<string>{64, 64}</string>
+				<string>{64, 64}</string>
+				<string>{64, 64}</string>
+				<string>{64, 64}</string>
+				<string>{64, 64}</string>
+				<string>{64, 64}</string>
+				<string>{64, 64}</string>
+				<string>{64, 64}</string>
+				<string>{64, 64}</string>
+				<string>{64, 64}</string>
 			</object>
 		</object>
 	</data>
