--- a/trunk/Scout.xib
+++ b/trunk/Scout.xib
@@ -41029,6 +41029,22 @@
 					</object>
 					<int key="connectionID">2539</int>
 				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBBindingConnection" key="connection">
+						<string key="label">contentValues: smartFilterStrings</string>
+						<reference key="source" ref="121531126"/>
+						<reference key="destination" ref="57479748"/>
+						<object class="NSNibBindingConnector" key="connector">
+							<reference key="NSSource" ref="121531126"/>
+							<reference key="NSDestination" ref="57479748"/>
+							<string key="NSLabel">contentValues: smartFilterStrings</string>
+							<string key="NSBinding">contentValues</string>
+							<string key="NSKeyPath">smartFilterStrings</string>
+							<int key="NSNibBindingConnectorVersion">2</int>
+						</object>
+					</object>
+					<int key="connectionID">2543</int>
+				</object>
 			</object>
 			<object class="IBMutableOrderedSet" key="objectRecords">
 				<object class="NSArray" key="orderedObjects">
@@ -56292,7 +56308,7 @@
 				<object class="NSMutableArray" key="dict.values">
 					<bool key="EncodedWithXMLCoder">YES</bool>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
-					<string>{{129, 53}, {1152, 734}}</string>
+					<string>{{44, 53}, {1152, 734}}</string>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 					<string>{628, 654}</string>
 					<string>{{217, 442}, {480, 272}}</string>
@@ -57562,7 +57578,7 @@
 						<bytes key="NSTransformStruct">P4AAAL+AAABEA4AAxCYAAA</bytes>
 					</object>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
-					<string>{{319, 633}, {225, 88}}</string>
+					<string>{{362, 628}, {225, 88}}</string>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
@@ -59024,7 +59040,7 @@
 				</object>
 			</object>
 			<nil key="sourceID"/>
-			<int key="maxID">2539</int>
+			<int key="maxID">2543</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<object class="NSMutableArray" key="referencedPartialClassDescriptions">
